Fixing sonarQube issues Main fix: new interface to avoid circular dependencies between users and groups (iteration 1)